force-app/main/default/objects/Approver__c/Approver__c.object-meta.xml
<CustomObject>
    <label>Approval Role</label>
    <nameField>
        <label>role</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>