force-app/main/default/objects/Approver__c/fields/Approval_attri__c.field-meta.xml
<CustomField>
    <fullName>Approval_attri__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval attri</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipName>Business</relationshipName>
    <type>Lookup</type>
</CustomField>