force-app/main/default/objects/Approver__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>logistic</fullName>
            </value>
            <value>
                <fullName>manager</fullName>
            </value>
            <value>
                <fullName>finance/BA</fullName>
            </value>
            <value>
                <fullName>finance 2</fullName>
            </value>
            <value>
                <fullName>sales director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>