force-app/main/default/objects/Approver__c/fields/sequnse__c.field-meta.xml
<CustomField>
    <fullName>sequnse__c</fullName>
    <label>sequnse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>